--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>My name's TJ Ptak and I'm a Junior at Purdue University studying computer science. My biggest interests are web development and systems programming. Outside of classes and internships, I like programming audio applications using Javascript and C++. It's a great way to practice technical concepts while doing something I'm passionate about.</p>
     </body>
 </html>
